# daily-review

./: .gitignore  README.md  pyproject.toml  vercel.json
.github/workflows/: daily.yml
data/: seen-index.json
data/daily/: 2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json
docs/: vercel-backup.md
docs/superpowers/plans/: 2026-07-18-gecam-daily-review-phase1.1-sync.md  2026-07-18-gecam-daily-review-phase1.md
docs/superpowers/specs/: 2026-07-18-gecam-daily-review-design.md
scripts/: backfill_edge.py  backfill_english.py  backfill_outlook.py  build_site.py  list_models.py  reclassify_days.py  regenerate_reviews.py  run_daily.py  vendor_fonts.py
src/gdr/: citations.py  config.py  daily_review.py  dedup.py  fulltext.py  jsonutil.py  llm.py  models.py  pipeline.py  reclassify.py  relevance.py  render.py  site_build.py  store.py  summarize.py
src/gdr/sources/: ads_source.py  arxiv_source.py  (+2 more)
static/: search.js  style.css
static/fonts/: fonts.css
templates/: archive.html  base.html  day.html  index.html
tests/: conftest.py  test_ads_source.py  test_arxiv_source.py  test_citations.py  test_composite_source.py  test_config.py  test_daily_review.py  test_dedup.py  test_fulltext.py  test_jsonutil.py  test_llm.py  test_models.py  test_pipeline.py  test_reclassify.py  test_relevance.py  test_render.py  test_site_build.py  test_store.py  test_summarize.py
tests/fixtures/: arxiv_html_sample.html  arxiv_sample.xml
